src/objects/Sales_Rep_MD__c.object
<CustomObject>
    <fields>
        <fullName>Client_Spend__c</fullName>
        <formula>Monthly_Distribution__r.Client_Spend__c * Sales_Rep__r.Commission_Percentage__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client Spend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Commission_Profile__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Commission Profile</label>
        <referenceTo>Commission_Profile__c</referenceTo>
        <relationshipLabel>Sales Rep Monthly Distributions</relationshipLabel>
        <relationshipName>Sales_Rep_Monthly_Distributions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Current_User__c</fullName>
        <formula>Sales_Rep__r.Current_User__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <formula>Monthly_Distribution__r.Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Gross_Profit__c</fullName>
        <formula>Monthly_Distribution__r.Actual_Gross_Profit__c * Sales_Rep__r.Percentage_of_GP_Allocation__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gross Profit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Distribution__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <label>Monthly Distribution</label>
        <referenceTo>Monthly_Distribution__c</referenceTo>
        <relationshipLabel>Sales Rep Monthly Distributions</relationshipLabel>
        <relationshipName>Sales_Rep_MDs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SalesRep__c</fullName>
        <formula>Commission_Profile__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Rep</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Rep</label>
        <referenceTo>Contract_Sales_Rep__c</referenceTo>
        <relationshipName>Sales_Rep_MDs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <formula>Monthly_Distribution__r.Type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <label>Sales Rep Monthly Distribution</label>
    <nameField>
        <displayFormat>SRMD-{00000}</displayFormat>
        <label>Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Rep Monthly Distributions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>